--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.49.11",
     "styled-components": "^5.3.1",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.8",
+    "throttle-debounce": "^5.0.0",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
   },
