--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "reactstrap": "^9.0.2",
     "recharts": "^2.1.9",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
