--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
